renamed factories to clearer names