@@ -85,22 +85,9 @@ task runApp3(type: JavaExec) {
 
 task runApp4(type: JavaExec) {
     group = "Application"
-    description = "Runs Application 4 - Nested Controllers"
+    description = "Runs Application 4 - Table View Cell Factories"
     classpath sourceSets.main.runtimeClasspath
     main = 'org.epistatic.app4.Main'
-    doFirst {
-        jvmArgs = [
-                '--module-path', "${JFX_INSTALL}/lib",
-                '--add-modules', 'javafx.fxml,javafx.controls'
-        ]
-    }
-}
-
-task runApp5(type: JavaExec) {
-    group = "Application"
-    description = "Runs Application 5 - Table View Cell Factories"
-    classpath sourceSets.main.runtimeClasspath
-    main = 'org.epistatic.app5.Main'
     doFirst {
         jvmArgs = [
                 '--module-path', "${JFX_INSTALL}/lib",
